artifacts/ingress/staging/ct-ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ct-staging-static-ip
    kubernetes.io/ingress.class: "gce"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - staging-api.globalforestwatch.org
    - staging.emissionspathways.org
    - ui-staging.resourcewatch.org
    - prep-manager.vizzuality.com
    secretName: ct-staging-tls
  rules:
  - host: staging-api.globalforestwatch.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: staging.emissionspathways.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: prep-manager.vizzuality.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: ui-staging.resourcewatch.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: ct-ui
          servicePort: 80
